# ROS1_Gazebo_Simulation

./: README.md
arm_test/: CMakeLists.txt  CMakeLists.txt~  package.xml
arm_test/launch/: pickplace.launch  simulation.launch
arm_test/msg/: graspObject.msg  graspposition.msg
arm_test/src/: grasp_decider_1.cpp  grasp_decider_2.cpp  grasp_decider_3.cpp  grasp_decider_4.cpp  grasp_decider_5.cpp  object.cpp  pickplace1.cpp  pickplace2.cpp  planning_scene1.cpp  planning_scene2.cpp
arm_test/srv/: go.srv
mrm_description/: CMakeLists.txt  package.xml
mrm_description/config/: controllers.yaml  mrmjoints.yaml
mrm_description/launch/: all.launch  gazebo.launch  init_mrm_joints.launch  mrm_gazebo.launch  rviz.launch  spawn.launch
mrm_description/meshes/: bin.STL  body0.stl  body1.stl  body2.stl  body3.stl  body4.stl  body5.stl  body6.stl  gripper_base.stl  new_gripper_base.stl  testbed.STL  testbed_wo_sensor.STL
mrm_description/urdf/: gripper.xacro  model.xacro  mrm.xacro  mrm.xacro~  stand.xacro
mrm_gazebo/: CMakeLists.txt  package.xml
mrm_gazebo/config/: JointTrajectoryParams.yaml  mrmControl.yaml  mrm_gazebo_joint_position.yaml  mrm_gazebo_joint_states.yaml  mrm_grasp_data.yaml  trajectory_control.yaml
mrm_gazebo/launch/: mrm.launch  mrm_world_grasping.launch  multiple.launch
mrm_gazebo/scripts/: pick_and_place.py
mrm_gazebo/worlds/: grasping.world
mrm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  mrm.srdf  ompl_planning.yaml  ompl_planning.yaml~  stomp_planning.yaml
mrm_moveit_config/launch/: demo.launch  move_group.launch  moveit.launch  moveit.rviz  moveit_planning_execution.launch  moveit_planning_execution.launch~  moveit_rviz.launch  mrm_moveit_controller_manager.launch.xml  mrm_moveit_sensor_manager.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
